# Code-Judge

./: .gitignore  README.md
api/: pyproject.toml
api/alembic/: env.py
api/alembic/versions/: a43ad7ad8cff_create_users_table.py
api/app/: db.py  main.py
api/app/core/: db.py
api/app/models/: user.py
api/app/schema/: user.py
api/tests/: test_health.py
infra/: compose.yml
