[project]
name = "code-judge-api"
version = "0.1.0"
description = "API service for Code Judge"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
